// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Heading - Snapshots > matches snapshot with default props 1`] = `
<h1
  class="text-xl font-semibold text-foreground"
  data-testid="heading-1"
>
  Default Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for combined level and size 1`] = `
<h3
  class="text-7xl sm:text-9xl font-bold text-foreground"
  data-testid="heading-3"
>
  H3 2XL Heading
</h3>
`;

exports[`Heading - Snapshots > matches snapshots for complex children 1`] = `
<h1
  class="text-xl font-semibold text-foreground"
  data-testid="heading-1"
>
  <span>
    Part 1
  </span>
   and 
  <strong>
    Part 2
  </strong>
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for custom className 1`] = `
<h1
  class="text-xl font-semibold text-foreground custom-heading-class"
  data-testid="heading-1"
>
  Custom Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 1`] = `
<h1
  class="text-xl font-semibold text-foreground"
  data-testid="heading-1"
>
  H1 Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 2`] = `
<h2
  class="text-xl font-semibold text-foreground"
  data-testid="heading-2"
>
  H2 Heading
</h2>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 3`] = `
<h3
  class="text-xl font-semibold text-foreground"
  data-testid="heading-3"
>
  H3 Heading
</h3>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 4`] = `
<h4
  class="text-xl font-semibold text-foreground"
  data-testid="heading-4"
>
  H4 Heading
</h4>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 5`] = `
<h5
  class="text-xl font-semibold text-foreground"
  data-testid="heading-5"
>
  H5 Heading
</h5>
`;

exports[`Heading - Snapshots > matches snapshots for different heading levels 6`] = `
<h6
  class="text-xl font-semibold text-foreground"
  data-testid="heading-6"
>
  H6 Heading
</h6>
`;

exports[`Heading - Snapshots > matches snapshots for different sizes 1`] = `
<h1
  class="text-lg font-semibold text-foreground"
  data-testid="heading-1"
>
  Small Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different sizes 2`] = `
<h1
  class="text-xl font-semibold text-foreground"
  data-testid="heading-1"
>
  Medium Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different sizes 3`] = `
<h1
  class="text-2xl font-bold text-foreground"
  data-testid="heading-1"
>
  Large Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different sizes 4`] = `
<h1
  class="text-4xl font-bold text-foreground"
  data-testid="heading-1"
>
  Extra Large Heading
</h1>
`;

exports[`Heading - Snapshots > matches snapshots for different sizes 5`] = `
<h1
  class="text-7xl sm:text-9xl font-bold text-foreground"
  data-testid="heading-1"
>
  2XL Heading
</h1>
`;
